# rabbitmq_test

./: docker-compose.yml  pyproject.toml  receive.py  send.py
rabbitmq/data/: .bash_history  .erlang.cookie
rabbitmq/data/mnesia/rabbit@40a464d85a56/: cluster_nodes.config  nodes_running_at_shutdown
rabbitmq/data/mnesia/rabbit@40a464d85a56/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: file_summary.ets  msg_store_index.ets
rabbitmq/data/mnesia/rabbit@40a464d85a56/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_transient/: file_summary.ets  msg_store_index.ets
rabbitmq/data/mnesia/rabbit@5d8b3fae3a7f/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_user_permission.DCL  rabbit_vhost.DCL
rabbitmq/data/mnesia/rabbit@b7f6120e651f/: cluster_nodes.config  nodes_running_at_shutdown
rabbitmq/data/mnesia/rabbit@b7f6120e651f/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: file_summary.ets  (+1 more)
rabbitmq/data/mnesia/rabbit@bdda6f0b267f/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
rabbitmq/data/mnesia/rabbit@c6e477b8c18c/: cluster_nodes.config  nodes_running_at_shutdown
rabbitmq/data/mnesia/rabbit@d3cb112aed60/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
(+14 files in other folders)
