[tool.poetry]
name = "rabbitmq-test"
version = "0.1.0"
description = ""
authors = ["kyohoonsim <kyohoonsim@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbitmq_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
